@@ -35,6 +35,15 @@ public class Main {
 	    }
 	}
 	
+//	public void processNumbers(List<? extends Number> numbers, int x) {
+//		int length = numbers.size();
+//		int lastIndex = length - 1;
+//		Number num = numbers.get(lastIndex);
+//		// 컴파일 에러가 발생하는 이유는 파라미터의 타입 아규먼트가
+//		// 와일드카드 상한 제한인데 쓰기 작업을 수행했기 때문에..
+//	    numbers.add(x);
+//	}
+	
 	public static void process(List<? extends Foo> list) {
         for (Foo elem : list) {
             System.out.println("Processing: " + elem.getName());
@@ -52,6 +61,7 @@ public class Main {
 
         process(barList); // Using the process method with a List of Bar
         
+        // java.util.ArrayList
         List<String> strList = new ArrayList<>();
         strList.add("korea");
         strList.add("usa");
@@ -61,7 +71,13 @@ public class Main {
         
         Main main = new Main();
         
+        /* 
+         static <E> List<E> of(E e1, E e2, E e3) {
+        	return ImmutableCollections.listFromTrustedArray(e1, e2, e3);
+    	}
+         */
         List<Integer> intList = List.of(1, 2, 3);
+//        intList.add(4);
         List<Double> doubleList = List.of(1.1, 2.2);        
         
         // 다음의 두 statement에서 호출하는 processNumbers 메서드에 대한
@@ -78,6 +94,7 @@ public class Main {
         // package java.util.ArrayList
         List<Integer> li = 
         		new ArrayList<>();
+//        li.add(1);
         //public static <T> List<T> asList(T... a)
         // Variable Argument와 파라미터 배열은 등가임
         /*
@@ -86,8 +103,19 @@ public class Main {
         }
          */
         // java.util.Arrays$ArrayList
-//        List<Integer> li = Arrays.asList(1, 2, 3, 4, 5, 6, 7);
+        /*
+         public static <T> List<T> asList(T... a) {
+            // java.util.Arrays.ArrayList.ArrayList
+        	return new ArrayList<>(a);
+    	}
+        */
+        // List.of(1,2,3) -> immutable 컬렉션을 생성
+        List<Integer> li2 = Arrays.asList(1, 2, 3, 4, 5, 6, 7); // immutable 컬렉션을 생성
+        // li2.add(8); final E[] e ->  
         
+//        List.of(1);
+        
+        sumOfList(intList);
         sumOfList(doubleList);
         
         System.out.println("hello");
